--- a/source/index.html
+++ b/source/index.html
@@ -33,10 +33,10 @@
 
         <ul class="site-list">
           <li class="site-list__item">
-            <a class="site-list__link">Главная</a>
+            <a class="site-list__link site-list__link--active">Главная</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="#">Продукция</a>
+            <a class="site-list__link" href="catalog.html">Продукция</a>
           </li>
           <li class="site-list__item">
             <a class="site-list__link" href="#">Качество и безопасность</a>
