--- a/source/catalog.html
+++ b/source/catalog.html
@@ -39,10 +39,10 @@
             <a class="site-list__link site-list__link--active">Продукция</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="#">Качество и безопасность</a>
+            <a class="site-list__link" href="quality.html">Качество и безопасность</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="#">Контакты</a>
+            <a class="site-list__link" href="contacts.html">Контакты</a>
           </li>
         </ul>
       </div>
