--- a/source/index.html
+++ b/source/index.html
@@ -39,10 +39,10 @@
             <a class="site-list__link" href="catalog.html">Продукция</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="#">Качество и безопасность</a>
+            <a class="site-list__link" href="quality.html">Качество и безопасность</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="#">Контакты</a>
+            <a class="site-list__link" href="contacts.html">Контакты</a>
           </li>
         </ul>
       </div>
@@ -69,10 +69,10 @@
             <a class="btn promo-catalog__btn">Посмотреть</a>
           </div>
         </section>
-        <section class="promo-quantity">
-          <div class="promo-quantity__container">
-            <h2 class="promo-quantity__title"><a href="#">Качество</a></h2>
-            <p class="promo-quantity__text">Вся продукция сертифицирована</p>
+        <section class="promo-quality">
+          <div class="promo-quality__container">
+            <h2 class="promo-quality__title"><a href="#">Качество</a></h2>
+            <p class="promo-quality__text">Вся продукция сертифицирована</p>
           </div>
         </section>
       </div>
