--- a/source/index.html
+++ b/source/index.html
@@ -52,7 +52,7 @@
           <source src="video/start.mp4" type="video/mp4" width="1506" height="870">
         </video>
         <video id="video-end" hidden muted="muted">
-          <source src="video/end.mp4" type="video/mp4" width="1506" height="870">
+          <source src="video/start.mp4" type="video/mp4" width="1506" height="870">
         </video>
         <div>
           <canvas class="promo-video__canvas" id="myCanvas" width="1506" height="870">
