--- a/source/contacts.html
+++ b/source/contacts.html
@@ -102,23 +102,23 @@
 
         <div class="page-footer__social">
           <ul class="page-footer__social-list">
-            <li class="page-footer__social-item page-footer__social-item--vk">
-              <a class="page-footer__social-link" href="#">
+            <li class="page-footer__social-item">
+              <a class="page-footer__social-link page-footer__social-link--vk" href="#">
                 <span class="visually-hidden">Vk</span>
               </a>
             </li>
-            <li class="page-footer__social-item page-footer__social-item--fb">
-              <a class="page-footer__social-link" href="#">
+            <li class="page-footer__social-item">
+              <a class="page-footer__social-link page-footer__social-link--fb" href="#">
                 <span class="visually-hidden">Facebook</span>
               </a>
             </li>
-            <li class="page-footer__social-item page-footer__social-item--youtube">
-              <a class="page-footer__social-link" href="#">
+            <li class="page-footer__social-item">
+              <a class="page-footer__social-link page-footer__social-link--youtube" href="#">
                 <span class="visually-hidden">Youtube</span>
               </a>
             </li>
-            <li class="page-footer__social-item page-footer__social-item--inst">
-              <a class="page-footer__social-link" href="#">
+            <li class="page-footer__social-item">
+              <a class="page-footer__social-link page-footer__social-link--inst" href="#">
                 <span class="visually-hidden">Instagram</span>
               </a>
             </li>
