--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="Мармелад, продажа, купить, конфеты, пищевой, высокое, качество, желейный, фрктовый, сок">
     <meta name="description" content="Интернет-магазин «Mikioriki» - вкусный и полезный мармелад">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Интернет-магазин «Milioriki»</title>
+    <title>Интернет-магазин «Mikioriki»</title>
     <link rel="preload" href="fonts/Circe-Regular.woff2" as="font" crossorigin="">
     <link rel="preload" href="fonts/MyriadPro-Bold.woff2" as="font" crossorigin="">
     <link rel="preload" href="fonts/MyriadPro-Regular.woff2" as="font" crossorigin="">
@@ -50,8 +50,9 @@
 
       <section class="promo-video">
         <div class="promo-video__responsive-video">
-          <video class="promo-video__video-start promo-video__video-start--active" id="video-start" autoplay="autoplay" muted="muted">
+          <video class="promo-video__video-start promo-video__video-start--active" id="video-start" autoplay="autoplay" muted="muted" autobuffer>
             <source src="video/start.mp4" type="video/mp4">
+            <source src="video/start.webm" type="video/webm">
           </video>
           <video class="promo-video__video-end" id="video-end" loop="loop" muted="muted" autoplay="autoplay">
             <source src="video/end.mp4" type="video/mp4">
